@@ -87,6 +87,7 @@ struct TrackerProcessorPrivate {
 
 	gboolean        interrupted; 
 	gboolean        finished;
+	gboolean        indexer_shut_down;
 
 	/* Statistics */
 	guint           directories_found;
@@ -197,6 +198,7 @@ tracker_processor_init (TrackerProcessor *object)
 
 	priv = object->private;
 
+	priv->indexer_shut_down = FALSE;
 	priv->modules = tracker_module_config_get_modules ();
 
 	/* For each module we create a TrackerCrawler and keep them in
@@ -588,7 +590,9 @@ item_queue_handlers_cb (gpointer user_data)
 	}
 
 	/* Now we try to send items to the indexer */
-	tracker_status_set_and_signal (TRACKER_STATUS_INDEXING);
+	if (!processor->private->indexer_shut_down)
+		tracker_status_set_and_signal (TRACKER_STATUS_INDEXING);
+	processor->private->indexer_shut_down = FALSE;
 
 	/* This is here so we don't try to send something if we are
 	 * still waiting for a response from the last send.
@@ -1097,6 +1101,8 @@ indexer_finished_cb (DBusGProxy  *proxy,
 		   str,
 		   items_done);
 	g_free (str);
+
+	processor->private->indexer_shut_down = TRUE;
 
 	/* Do we even need this step Optimizing ? */
 	tracker_status_set_and_signal (TRACKER_STATUS_OPTIMIZING);
